# axum-crud-test

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bun.lockb  docker-compose.yml  package.json  tailwind.config.ts
.github/workflows/: ci.yml
assets/: main.css
migrations/: 20231010054327_initial_database_setup.sql
src/: book.rs  handlers.rs  hello.html  main.rs
templates/: base.html  hello.html
