[package]
name = "axum-crud-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
askama = "0.12"
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }